Edit New issue Overwrite text-align property inside the sdk wrapper (closes #26)

--- a/src/css/night/_basics.sass
+++ b/src/css/night/_basics.sass
@@ -20,6 +20,7 @@
 
   background: $backgroundColor
   overflow: hidden
+  text-align: left
   *
     box-sizing: border-box
 
